fixed header spacing on mobile

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -9,8 +9,10 @@
 
 .site-nav .visuals {
   font-size: 1.5rem;
+  padding-top: 7px;
 }
 
 .site-nav .about {
   font-size: 1rem;
+  padding-top: 7px;
 }
