--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -26,11 +26,13 @@
     font-size: 1.5rem;
     float: left;
     margin-right: 19px;
+    padding: 0px;
   }
 
   .site-header .site-nav .about {
     font-size: 1.5rem;
     float: left;
+    padding: 0px;
   }
 
   blockquote {
